Enhance scored response same as github response and add tests